# nannyml-datasets

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: release.yml
data/binary_classification/hotel_booking/: monitoring_hotel_booking.parquet  reference_hotel_booking.parquet
data/binary_classification/synthetic_car_loan/: monitoring_synthetic_car_loan.parquet  reference_synthetic_car_loan.parquet
data/multiclass_classification/synthetic_credit_card/: monitoring_synthetic_credit_card.parquet  reference_synthetic_credit_card.parquet
data/regression/synthetic_car_price/: monitoring_synthetic_car_price.parquet  reference_synthetic_car_price.parquet
src/nannyml_datasets/: __init__.py  constants.py  typing.py
src/nannyml_datasets/binary_classification/: __init__.py  hotel_booking.py  synthetic_car_loan.py
src/nannyml_datasets/multiclass_classification/: __init__.py  satellite_imagery.py  synthetic_credit_card.py
src/nannyml_datasets/regression/: synthetic_car_price.py  typing.py
