[project]
name = "nannyml-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.2",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
